# VizFlow

./: .gitignore  CLAUDE.md  FEEDBACK.md  README.md  demo.ipynb  pyproject.toml  requirements.txt
data/jyao/alpha/: alpha_20251114.feather
data/ylin/trade/: 11110101.meords
docs/: DESIGN.md  PLAN.md  REORGANIZATION.md  VERSIONING.md
projects/post_trade_analysis/markout_analysis/notebooks/: 01_markout_analysis.py
projects/post_trade_analysis/toxicity_model/: FEEDBACK.md  README.md
projects/post_trade_analysis/toxicity_model/configs/: default.py
projects/post_trade_analysis/toxicity_model/notebooks/: 01_data_explore.ipynb  02_forward_return.ipynb  03_toxicity_analysis.ipynb
tests/: test_config.py  test_import.py  test_io.py  test_market.py  test_ops.py  test_schema_evolution.py
vizflow/: __init__.py  config.py  io.py  ops.py  presets.py  schema_evolution.py
