[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vizflow"
version = "0.5.6"
requires-python = ">=3.9"
dependencies = [
    "polars>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "build",
    "twine",
]
viz = [
    "plotly>=5.0",
    "dash>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["vizflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
